manifests/docmost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docmost
  namespace: docmost
spec:
  selector:
    app: docmost
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: docmost-db
  namespace: docmost
spec:
  selector:
    app: docmost-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: docmost-redis
  namespace: docmost
spec:
  selector:
    app: docmost-redis
  ports:
    - port: 6379
      targetPort: 6379
