manifests/docmost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docmost
  namespace: docmost
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  rules:
    - host: docmost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docmost
                port:
                  number: 3000
  tls:
    - hosts:
        - docmost
